<resources>
    <string name="app_name">Cambridge</string>
    <string name="desc">This is an image</string>
    <string name="colnam">Cambridge Institute of Technology</string>
    <string name="ulin">_________________________________</string>
    <string name="dpts">Departments</string>
    <string name="ugp"><u>Undergraduate Programs</u></string>
    <string name="pgp"><u>Postgraduate Programs</u></string>
    <string name="fac">Faculty</string>
    <string name="dptf"><u>Departments</u></string>
</resources>
