<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.citech.vanka.cambridge.MainActivity">
    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/imageView"
        android:src="@drawable/citfin"
        android:contentDescription="@string/desc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/colnam"
        android:textColor="#02124c"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/activity_vertical_margin"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:background="#02124c"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:src="@drawable/about"
            android:background="@android:color/transparent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:src="@drawable/academic"
            android:background="@android:color/transparent"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/imageButton5" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton3"
            android:src="@drawable/achieve"
            android:background="@android:color/transparent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton4"
            android:src="@drawable/rad"
            android:background="@android:color/transparent"
            android:layout_alignTop="@+id/imageButton5"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton5"
            android:src="@drawable/faculty"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton6"
            android:src="@drawable/gallery"
            android:background="@android:color/transparent"
            android:layout_alignTop="@+id/imageButton5"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton7"
            android:src="@drawable/locate"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton8"
            android:src="@drawable/contact"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/imageButton5" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton9"
            android:src="@drawable/dev"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ulin"
        android:textColor="#02124c"
        android:id="@+id/textView2"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
