<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.citech.vanka.cambridge.MainDept">
    <android.support.v7.widget.Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:background="#02124c"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
    <ImageButton
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:id="@+id/homeb"
        android:layout_alignStart="@+id/view"
        android:layout_alignTop="@+id/view"
        android:layout_alignBottom="@+id/view"
        android:src="@drawable/citpur"
        android:contentDescription="@string/desc"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dpts"
        android:paddingTop="15dp"
        android:paddingLeft="10dp"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/view"
        android:layout_toEndOf="@+id/imageView2" />
    <ImageView
        android:layout_width="3dp"
        android:layout_height="55dp"
        android:background="#ffffff"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/homeb" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view"
        android:background="#ffffff"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/ugp"
                android:paddingBottom="10dp"
                android:textColor="#02124c"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/textView7"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton10"
                android:src="@drawable/cse"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_below="@+id/textView7"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton11"
                android:src="@drawable/eee"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_below="@+id/textView7"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton12"
                android:src="@drawable/ece"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_below="@+id/textView7"
                android:layout_centerHorizontal="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton13"
                android:src="@drawable/sig"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton14"
                android:src="@drawable/mba"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton15"
                android:src="@drawable/mecd"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_alignBottom="@+id/imageButton13"
                android:layout_centerHorizontal="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton18"
                android:src="@drawable/cne"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_above="@+id/imageButton13"
                android:layout_centerHorizontal="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton16"
                android:src="@drawable/mec"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_below="@+id/imageButton10"
                android:layout_centerHorizontal="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton17"
                android:src="@drawable/ise"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_below="@+id/imageButton10"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton19"
                android:src="@drawable/civ"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_below="@+id/imageButton11"
                android:layout_alignParentEnd="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton20"
                android:src="@drawable/mcs"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_above="@+id/imageButton13"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton21"
                android:src="@drawable/mca"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc"
                android:layout_above="@+id/imageButton14"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pgp"
                android:id="@+id/textView4"
                android:textColor="#02124c"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_below="@+id/imageButton16"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
        </RelativeLayout>
</RelativeLayout>
