<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.citech.vanka.cambridge.MainFac">
    <android.support.v7.widget.Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:background="#02124c"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="65dp"
        android:layout_height="55dp"
        android:id="@+id/homeb"
        android:layout_alignStart="@+id/view"
        android:layout_alignTop="@+id/view"
        android:layout_alignBottom="@+id/view"
        android:src="@drawable/citpur"
        android:contentDescription="@string/desc"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fac"
        android:paddingTop="15sp"
        android:paddingLeft="10dp"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/view"
        android:layout_toEndOf="@+id/imageView2" />

    <ImageView
        android:layout_width="3sp"
        android:layout_height="55sp"
        android:background="#ffffff"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/homeb" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view"
        android:background="#ffffff"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dptf"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:textColor="#02124c"
                android:id="@+id/textView5"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textView5"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_alignParentEnd="true">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton22"
                    android:src="@drawable/bas"
                    android:contentDescription="@string/desc"
                    android:background="@android:color/transparent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton23"
                    android:src="@drawable/mca"
                    android:contentDescription="@string/desc"
                    android:background="@android:color/transparent"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton24"
                    android:src="@drawable/mba"
                    android:contentDescription="@string/desc"
                    android:background="@android:color/transparent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton25"
                    android:src="@drawable/cse"
                    android:contentDescription="@string/desc"
                    android:background="@android:color/transparent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton26"
                    android:src="@drawable/ece"
                    android:contentDescription="@string/desc"
                    android:background="@android:color/transparent"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton27"
                    android:src="@drawable/eee"
                    android:contentDescription="@string/desc"
                    android:background="@android:color/transparent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton28"
                    android:src="@drawable/ise"
                    android:contentDescription="@string/desc"
                    android:background="@android:color/transparent"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton29"
                    android:src="@drawable/mec"
                    android:contentDescription="@string/desc"
                    android:background="@android:color/transparent"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton30"
                    android:src="@drawable/civ"
                    android:contentDescription="@string/desc"
                    android:background="@android:color/transparent"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>


        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
